--- a/main.html
+++ b/main.html
@@ -8,6 +8,24 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<nav>
+        <ul>
+			<li><a href="">Home</a></li>
+			<li><a href="">About us</a></li>
+	    	<li><a href="">Contact us</a></li>
+		</ul>
+	</nav>
+	<h2>3 random videos</h2>
+		<video width="220" height="150" controls>
+        <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4" allowscriptaccess="always" allowfullscreen="true" >
+        </video>	
+		<video width="220" height="150" controls>
+        <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4" type="video/mp4" allowscriptaccess="always" allowfullscreen="true" >
+        </video>
+		<video width="220" height="150" controls>
+        <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/SubaruOutbackOnStreetAndDirt.mp4" type="video/mp4" allowscriptaccess="always" allowfullscreen="true" >
+        </video>
+
 	<iframe width="1046" height="449" src="https://www.youtube.com/embed/JLf2YK4Z_oc?list=RDJLf2YK4Z_oc" title="Adhir Man full song Nilkanth Master | Pooja Sawant" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     <script type="text/javascript" src="./script.js">
 </script>
